--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -4,6 +4,8 @@ on:
     push:
         paths-ignore:
             - README.md
+        branches:
+            - master
     pull_request:
         paths-ignore:
             - README.md
