--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,7 @@ services:
     keycloak:
         build: .
         container_name: mocap-keycloak
+        restart: always
         ports:
             - 8888:8080 # web ui
         environment:
