--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "mocap-keycloak",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
