feat: Improve Dockerfile and docker compose

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,13 @@
-# Need these values in .env
+################################################################################################
+# DO NOT MODIFY THIS FILE, CREATE A FILE ".env.production.local" AND ADD SECRET THERE INSTEAD #
+################################################################################################
+
+# The admin username
+KEYCLOAK_ADMIN=admin
+# The admin password
+KEYCLOAK_ADMIN_PASSWORD=admin
+# Keycloak host URL
+KEYCLOAK_HOST_URL=http://localhost:8888
 
 # SMTP host of your email. For example, if you host is outlook, then it is https://smtp.outlook.com/
 # Used in Realm settings -> Email -> Connection & Authentication -> Host
@@ -13,7 +22,3 @@ SMTP_EMAIL=
 # The password of the email
 # Used in Realm settings -> Email -> Connection & Authentication -> Password
 SMTP_PASSWORD=
-# The admin username
-KEYCLOAK_ADMIN=admin
-# The admin password
-KEYCLOAK_ADMIN_PASSWORD=admin
