--- a/compose.yaml
+++ b/compose.yaml
@@ -1,15 +1,23 @@
+version: "3.5"
+
 services:
     keycloak:
-        build: .
+        image: mocap/keycloak
         container_name: mocap-keycloak
-        restart: always
+        build:
+            context: ./
+            dockerfile: Dockerfile
+        env_file:
+            - .env.production
+            - .env.production.local
+        networks:
+            - mocap
         ports:
             - 8888:8080 # web ui
-        environment:
-            SMTP_HOST: ${SMTP_HOST}
-            SMTP_PORT: ${SMTP_PORT}
-            SMTP_EMAIL: ${SMTP_EMAIL}
-            SMTP_PASSWORD: ${SMTP_PASSWORD}
-            KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
-            KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
-        command: "start-dev --import-realm"
+        restart: always
+        command: start-dev --import-realm --hostname-url=$${KEYCLOAK_HOST_URL}
+        # Should have used this command instead but certificate is set up yet
+        # command: "start --import-realm --hostname-url=$${KEYCLOAK_HOST_URL}"
+networks:
+    mocap:
+        external: true
