--- a/.env.production
+++ b/.env.production
@@ -9,7 +9,7 @@ KEYCLOAK_ADMIN_PASSWORD=admin
 # Keycloak host URL
 KEYCLOAK_HOST_URL=http://localhost:8888
 
-# SMTP host of your email. For example, if you host is outlook, then it is https://smtp.outlook.com/
+# SMTP host of your email. For example, if you host is outlook, then it is smtp.outlook.com
 # Used in Realm settings -> Email -> Connection & Authentication -> Host
 SMTP_HOST=
 # SMTP port of your email. For example, if you host is outlook, then it is 587
