feat: Add reverse proxy and deployment stuff

--- a/.env.development
+++ b/.env.development
@@ -6,8 +6,10 @@
 KEYCLOAK_ADMIN=admin
 # The admin password
 KEYCLOAK_ADMIN_PASSWORD=admin
-# Keycloak host URL
-KEYCLOAK_HOST_URL=http://localhost:8888
+# Keycloak host name
+KEYCLOAK_HOSTNAME=http://localhost:8888
+# Keycloak host path, useful if you are using reverse proxy
+KEYCLOAK_HOST_PATH=/
 
 # SMTP host of your email. For example, if you host is outlook, then it is smtp.outlook.com
 # Used in Realm settings -> Email -> Connection & Authentication -> Host
