--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "eject": "react-scripts eject",
         "check-format": "prettier --check .",
         "format": "prettier --write .",
-        "lint": "eslint . --ext .ts --ext .tsx",
+        "lint": "eslint . --ext .ts --ext .tsx --max-warnings=0",
         "lint-and-fix": "eslint . --ext .ts --ext .tsx --fix"
     },
     "dependencies": {
