--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,7 @@ services:
         build:
             context: ./
             dockerfile: Dockerfile
+            target: ${TARGET:-local}
         env_file:
             - .env.production
             - .env.production.local
