--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -14,6 +14,8 @@ jobs:
     build-docker-image:
         name: Build Image
         runs-on: ubuntu-20.04
+        env:
+            - TARGET: main
         steps:
             - uses: docker/build-push-action@v5
               with:
