--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -18,4 +18,5 @@ jobs:
             - uses: docker/build-push-action@v5
               with:
                   push: false
+                  target: main
                   tags: mocap/keycloak:latest
