--- a/.env.production
+++ b/.env.production
@@ -11,6 +11,13 @@ KEYCLOAK_HOSTNAME=
 # Keycloak host path, useful if you are using reverse proxy
 KEYCLOAK_HOST_PATH=/
 
+# Database url
+DATABASE_URL=jdbc:postgresql://mocap-database:5432/keycloak
+# Database username
+DATABASE_USERNAME=admin
+# Database password
+DATABASE_PASSWORD=
+
 # SMTP host of your email. For example, if you host is outlook, then it is smtp.outlook.com
 # Used in Realm settings -> Email -> Connection & Authentication -> Host
 SMTP_HOST=
